tested req.body

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 <body>
     <div>
         <form id="myForm">
+            <input type="text" id="name" multiple />
             <input type="file" id="file" multiple/>
             <input type="submit" />
         </form>
